sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:6: error: not found: value ecart
  ecart=lgr/2
  ^AlgShellSort:8: error: not found: value ecart
  while(ecart>0){
        ^AlgShellSort:16: error: not found: value ecart
      while (i>0 && (v<getValeur(i-ecart))){
                                   ^AlgShellSort:18: error: not found: value ecart
        copie(i-ecart,i)
                ^AlgShellSort:19: error: not found: value ecart
        i=i-ecart
            ^