sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var lgr=getNombreValeurs()
  var v=0
  var i=0
  ecart=lgr/2
  
  while(ecart>0){

    for (compteur<-1 to lgr-1){

      i=compteur

      v=getValeur(i)

      while (i>0 && (v<getValeur(i-ecart))){

        copie(i-ecart,i)
        i=i-ecart
      }


      setValeur(i,v)
    }
  }
}